Collecting captures to set or map conserves insertion order; Better error message for parse failures